--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+/* client/src/index.css */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --magenta: #9F0D7F;
+  --bright-pink: #EA1179;
+  --black: #22092C;
+  --maroon: #872341;
+  --red: #BE3144;
+  --orange: #F05941;
+  --light-orange: #FFE4C9;
+  --cream: #FFF7F1;
 }
